--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,21 +36,34 @@ phases:
       # - echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources/list.d/google-chrome.list
       # - apt-get -y update
       # - yum -y install google-chrome-stable
-      - wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
-      - yum -y install google-chrome-stable_current_x86_64.rpm
+      - wget https://ftp.mozilla.org/pub/firefox/releases/88.0/linux-x86_64/en-US/firefox-88.0.tar.bz2
+      - tar xjf firefox-*.tar.bz2
+      - ~/firefox/firefox
+      - rm firefox-*.tar.bz2
+      #- yum -y install google-chrome-stable_current_x86_64.rpm
       
-      - wget https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_linux64.zip
-      - unzip chromedriver_linux64.zip
-      - mv chromedriver /usr/bin/chromedriver
-      - chown root:root /usr/bin/chromedriver
-      - chmod +x /usr/bin/chromedriver
+      - wget https://github.com/mozilla/geckodriver/releases/download/v0.30.0/geckodriver-v0.30.0-linux64.tar.gz
+      - ls
+      - tar xvzf geckodriver-v0.30.0-linux64.tar.gz
+      - mv geckodriver /usr/bin/geckodriver
+      - chmod +x /usr/bin/geckodriver
+      
+      
+      #- wget https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_linux64.zip
+      #- unzip chromedriver_linux64.zip
+      #- mv chromedriver /usr/bin/chromedriver
+      #- chown root:root /usr/bin/chromedriver
+      #- chmod +x /usr/bin/chromedriver
       - wget https://selenium-release.storage.googleapis.com/3.13/selenium-server-standalone-3.13.0.jar
 
       #- robot --version
       - pwd
       - ls
-      - google-chrome --version
-      - chromedriver --version
+      #- google-chrome --version
+      #- chromedriver --version
+      
+      - firefox -P
+      
       
       # - google-chrome-stable --no-sandbox --headless --disable-gpu --dump-dom https://www.google.com/
       # - command
