--- a/buildspec.yml
+++ b/buildspec.yml
@@ -40,6 +40,7 @@ phases:
       - tar xjf firefox-*.tar.bz2
       - ls
       - cd firefox
+      - export DISPLAY=localhost:0.0
       - ls
       - firefox -P
       - cd..
