--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,9 +36,9 @@ phases:
       # - echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources/list.d/google-chrome.list
       # - apt-get -y update
       # - yum -y install google-chrome-stable
-      #- wget https://ftp.mozilla.org/pub/firefox/releases/88.0/linux-x86_64/en-US/firefox-88.0.tar.bz2
-      #- tar xjf firefox-*.tar.bz2
-      - apt-get install firefox
+      - wget https://ftp.mozilla.org/pub/firefox/releases/88.0/linux-x86_64/en-US/firefox-88.0.tar.bz2
+      - tar xjf firefox-*.tar.bz2
+      #- apt-get install firefox
       - ls
       - cd firefox
       #- export DISPLAY=localhost:0.0
